# Spaghetti-Scanner-3000

./: .env  .env.example  .gitignore  Dockerfile  README.MD  README_WEB_UI.md  check_health.py  check_path.py  docker-compose.yml  main_agent.py  project-idea.md  project-plan.md  pyproject.toml  start.sh  start_all.bat
dev_manager_agent/: agent.py
dev_manager_agent/.adk/: session.db
repo_agent/: agent.py
repo_agent/.adk/: session.db
reviewer_agent/: agent.py
security_agent/: agent.py
streamlit_ui/: app.py
